--- a/contents/css/_topbar.css
+++ b/contents/css/_topbar.css
@@ -14,7 +14,7 @@
     padding-right: 1rem;
     padding-left: 1rem;
   }
-  @media (--large) {
+  @media (--xlarge) {
     font-size: 1.375rem;
   }
 }
@@ -27,7 +27,7 @@
 .topbar-logo-text {
   display: none;
   margin-right: .5rem;
-  @media (--small) {
+  @media (--xsmall) {
     display: inline;
   }
 }
@@ -35,6 +35,12 @@
 .topbar-logo-date {
   display: none;
   @media (--xsmall) {
+    display: inline;
+  }
+  @media (--medium) {
+    display: none;
+  }
+  @media (--large) {
     display: inline;
   }
 }
@@ -108,7 +114,7 @@
   font-size: .875rem;
   padding: .25rem .75rem;
   border-width: 3px;
-  @media (--large) {
+  @media (--xlarge) {
     font-size: 1.375rem;
   }
 }
